--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <!-- RAG -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-advisors-vector-store</artifactId>
+        </dependency>
+        <!-- RAG -->
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
