--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=spring-ai
-spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.api-key=YOUR_API_KEY
 spring.ai.openai.chat.options.model=gpt-4o
 spring.threads.virtual.enabled=true
+
+## Addtional Configs
+#spring.ai.openai.chat.options.response-format.type=JSON_SCHEMA
+#spring.ai.openai.chat.options.response-format.name=MySchemaName
+#spring.ai.openai.chat.options.response-format.schema={"type":"object","properties":{"steps":{"type":"array","items":{"type":"object","properties":{"explanation":{"type":"string"},"output":{"type":"string"}},"required":["explanation","output"],"additionalProperties":false}},"final_answer":{"type":"string"}},"required":["steps","final_answer"],"additionalProperties":false}
+#spring.ai.openai.chat.options.response-format.strict=true
