--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=spring-ai
-spring.ai.openai.api-key=YOUR_API_KEY
+spring.ai.openai.api-key=API_KEY
 spring.ai.openai.chat.options.model=gpt-4o
 spring.threads.virtual.enabled=true
 
